--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
    <!-- <video autoplay muted class="wrapper__video">
       <source src="./images/Neureality%20Hackathon_Promo_1080p_v2.mp4">
    </video> -->
+   <script src="https://cdn.logwork.com/widget/countdown.js"></script>
+   <a href="https://logwork.com/countdown-timer" class="countdown-timer" data-style="circles" data-timezone="America/New_York" data-textcolor="#ffffff" data-date="2024-06-06 13:39" data-digitscolor="#ffffff" data-unitscolor="#ffffff">Countdown Timer</a>
 	</div>
 
 
