update readme and sponsor list

--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
 					</div>
 
 					<div class="box2">
-						<a href="https://www.engineering.columbia.edu/"><img id="liinc" class="cgui" alt="Columbia Engineering" src='./images/columbia-engineering-logo_0_720.jpg'></a>
+						<a href="https://neureality-cu.github.io/Neureality/hackathon.html"><img id="neureality" class="cgui" alt="Neureality" src='./images/icon2.png'></a>
 					</div>
 
 				</div>
